--- a/app/globals.css
+++ b/app/globals.css
@@ -9,7 +9,7 @@
 
 @theme {
   --font-sans: var(--font-inter);
-  --spacing-999: 1920px;
+  --spacing-999: 1280px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,8 +19,31 @@
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+h5 {
+  font-size: 1.5rem;
+  line-height: 1.75rem;
+  font-weight: bold;
+}
+
+h4 {
+  font-size: 1.75rem;
+  line-height: 2rem;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 2rem;
+  line-height: 2.25rem;
+  font-weight: bold;
+}
+
+h2 {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+  font-weight: bold;
+}
+
+h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
 }
