--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@plugin "tailwindcss-debug-screens";
 
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
@@ -27,26 +28,26 @@
   }
 
   body {
-    @apply text-base-black antialiased dark:bg-base-dark-background dark:text-white;
+    @apply text-sm md:text-base text-base-black antialiased dark:bg-base-dark-background dark:text-white;
   }
 
   h5 {
-    @apply text-[1.5rem] font-bold;
+    @apply text-[1.125rem] md:text-[1.5rem] font-bold;
   }
 
   h4 {
-    @apply text-[1.75rem] font-bold;
+    @apply text-[1.25rem] md:text-[1.75rem] font-bold;
   }
 
   h3 {
-    @apply text-[2rem] font-bold;
+    @apply text-[1.375rem] md:text-[2rem] font-bold;
   }
 
   h2 {
-    @apply text-[2.25rem] font-bold;
+    @apply text-[1.5rem] md:text-[2.25rem] font-bold;
   }
 
   h1 {
-    @apply text-[2.5rem] font-bold;
+    @apply text-[1.75rem] md:text-[2.5rem] font-bold;
   }
 }
