fix flag button

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,8 +8,8 @@
   --font-merriweather: var(--font-merriweather);
   --spacing-999: 1280px;
 
-  --color-base-black: #27272A;
-  --color-base-border: #DDDDE3;
+  --color-base-black: #27272a;
+  --color-base-border: #dddde3;
   --color-base-dark-background: #212121;
 }
 
